UN-3267 Fix Projects cards dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -424,7 +424,7 @@ button[id*="prescriptoredge"] {
 .dark .react-flow__panel,
 .dark .react-flow__controls-button {
     background-color: var(--bs-dark-mode-dim);
-    border: 0.5px solid var(--bs-gray-dark);
+    border: 1px solid var(--bs-gray-dark);
     color: var(--bs-white);
     fill: var(--bs-white);
 }
